# TerrainGen

./: .gitignore  CMakeLists.txt
include/: constants.hpp  renderer.hpp  shader.hpp  shaders.hpp
shaders/: shader.vert
src/: main.cpp  renderer.cpp  shader.cpp  shaders.cpp
